--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,9 @@
-<!-- index.html -->
 <html>
+  <head>
+    <title>Project-X</title>
+    <meta name="viewport" content="width=device-width">
+    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
+  </head>
 <body>
   <div id="root"></div>
   <script src="./index.tsx"></script>
