--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Project-X</title>
     <meta name="viewport" content="width=device-width">
-    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@600&display=swap" rel="stylesheet">
   </head>
 <body>
   <div id="root"></div>
