--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Project-X</title>
+    <title>project-book</title>
     <meta name="viewport" content="width=device-width">
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@600&display=swap" rel="stylesheet">
   </head>
